--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p id="result"></p>
 
   <script>
-    const API_URL = "https://mindful-freedom-production.up.railway.app/"; // public backend URL
+    const API_URL = "https://mindful-freedom-production.up.railway.app"; // public backend URL
 
     document.getElementById("checkBtn").addEventListener("click", async () => {
       try {
@@ -24,3 +24,4 @@
   </script>
 </body>
 </html>
+
