--- a/index.html
+++ b/index.html
@@ -1,27 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Backend Test</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PostgreSQL Project Frontend</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 20px; }
+    button { padding: 10px 15px; margin-bottom: 20px; cursor: pointer; }
+    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+    th { background-color: #f2f2f2; }
+  </style>
 </head>
 <body>
-  <h1>Check Backend Status</h1>
-  <button id="checkBtn">Check</button>
-  <p id="result"></p>
+
+  <h1>PostgreSQL Users</h1>
+  <button id="loadUsers">Show Users</button>
+
+  <table id="usersTable" style="display: none;">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
   <script>
-    const API_URL = "https://mindful-freedom-production.up.railway.app"; // public backend URL
+    const API_BASE = "https://mindful-freedom-production.up.railway.app";
 
-    document.getElementById("checkBtn").addEventListener("click", async () => {
+    document.getElementById("loadUsers").addEventListener("click", async () => {
       try {
-        const res = await fetch(`${API_URL}/health`);
-        if (!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
-        const data = await res.json();
-        document.getElementById("result").innerText = "Status: " + data.status;
+        const res = await fetch(`${API_BASE}/users`);
+        if (!res.ok) throw new Error(`HTTP error! Status: ${res.status}`);
+        const users = await res.json();
+
+        const tbody = document.querySelector("#usersTable tbody");
+        tbody.innerHTML = ""; // Clear previous rows
+
+        users.forEach(user => {
+          const row = document.createElement("tr");
+          row.innerHTML = `<td>${user.id}</td><td>${user.name}</td><td>${user.email}</td>`;
+          tbody.appendChild(row);
+        });
+
+        document.getElementById("usersTable").style.display = "table";
       } catch (err) {
-        document.getElementById("result").innerText = "Error: " + err.message;
+        alert("Error fetching users: " + err.message);
       }
     });
   </script>
+
 </body>
 </html>
-
