--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <button type="submit" id="submitBtn">Login</button>
     </form>
     <div class="toggle">
-      <a href="#" id="toggleForm">Don't have an account? Sign up</a>
+      <a href="https://shreynik00.github.io/PostgrSQl-Project-front-end-/signup.html" id="toggleForm">Don't have an account? Sign up</a>
     </div>
     <div class="google-btn">
       <div id="googleSignIn"></div>
@@ -168,7 +168,7 @@
 
     window.onload = function () {
       google.accounts.id.initialize({
-        client_id: "YOUR_GOOGLE_CLIENT_ID",
+        client_id: "412567641200-in553ori374umoc0rkpkp33lmbr3fg0d.apps.googleusercontent.com",
         callback: handleGoogleResponse,
       });
       google.accounts.id.renderButton(
@@ -180,3 +180,4 @@
 
 </body>
 </html>
+
