--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <button type="submit" id="submitBtn">Login</button>
     </form>
     <div class="toggle">
-      <a href="https://shreynik00.github.io/PostgrSQl-Project-front-end-/signup.html" id="toggleForm">Don't have an account? Sign up</a>
+      <a href="#" id="toggleForm">Don't have an account? Sign up</a>
     </div>
     <div class="google-btn">
       <div id="googleSignIn"></div>
@@ -180,4 +180,5 @@
 
 </body>
 </html>
+
 
